# Schengen-Calculator

./: .gitignore  Dockerfile  README.md  app.db  boot.sh  pyproject.toml  schengen_calculator.py
.github/workflows/: main.yml  merge_dev.yml  merge_prod.yaml
app/: __init__.py  models.py
app/main/: forms.py  panels.py  routes.py
app/templates/: _trip.html  base.html  edit_profile.html  index.html  trips.html  user.html
app/templates/auth/: login.html
app/templates/email/: reset_password.html  reset_password.txt
migrations/versions/: fd383c76b884_.py
