[tool.poetry]
name = "schengen_calculator"
version = "0.1.0"
description = ""
authors = ["Jordan Begg"]

[tool.poetry.dependencies]
python = "3.9"
Flask = "^2.0.2"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Bootstrap = "^3.3.7"
Flask-WTF = "^1.0.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
